<resources>
    <string name="app_name">FilmDB</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="search_hint">Search Movies...</string>
    <string name="title">Title</string>
    <string name="genres">Genres</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date :</string>
    <string name="backdrop_image">Backdrop image</string>
    <string name="poster_image">Poster image</string>
    <string name="category">Category</string>
    <string name="content_review">content review</string>
    <string name="url_review">Url review</string>
    <string name="author">Author</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen">splashscreen</string>
    <string name="movie_backdrop">movie backdrop</string>
    <string name="movie_poster">movie poster</string>

</resources>
